--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -35,5 +35,36 @@
 
 
 .navbar__search {
-    
+    height: 40px;
+    flex: 1;
+    border: 1px solid rgba(0, 0, 0, 0.144);
+    display: flex;
+    margin-right: 10px;
+    margin-left: 10px;
+    position: relative;
+    padding-right: 10px;
+}
+
+.navbar__search input {
+    flex: 1;
+    text-indent: 12px;
+    outline: none;
+    border: none;
+}
+
+.navbar__search button {
+    cursor: pointer;
+}
+
+.navbar__search-model {
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    background: #fff;
+    top: calc(100% + 2px);
+    z-index: 10;
+    padding: 20px;
+    box-shadow: 3px 3px 5px #0006;
+    overflow: auto;
+    color: #000;
 }
